Fixed overflowing people header problem by narrowing people header links.

--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -377,7 +377,7 @@
 }
 .profile #people_header > *{
   padding: 0 15px;
-  width: 170px;
+  width: 166px;
   text-align: center;
   display:inline-block;
   height: 30px;
